// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App draws and renders drawn cards 1`] = `
<div
  className="App"
>
  <div
    className="left-sidebar"
  >
    <div
      className="deck"
    >
      <div
        className="draw-card card face-down"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          className="card-back"
        >
          <img
            alt="/backimage.png"
            src="/backimage.png"
          />
        </div>
        <div
          className="card-front"
        >
          <img
            alt="/backimage.png"
            src="/backimage.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="drawn-cards"
  >
    <div
      className="card face-down"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="card-back"
      >
        <img
          alt="/backimage.png"
          src="/backimage.png"
        />
      </div>
      <div
        className="card-front"
      >
        <img
          alt="/3"
          src="/3"
        />
      </div>
    </div>
    <div
      className="card face-down"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="card-back"
      >
        <img
          alt="/backimage.png"
          src="/backimage.png"
        />
      </div>
      <div
        className="card-front"
      >
        <img
          alt="/4"
          src="/4"
        />
      </div>
    </div>
  </div>
  <div
    className="right-sidebar"
  />
</div>
`;

exports[`App shows detail card if set 1`] = `
<div
  className="App"
>
  <div
    className="left-sidebar"
  >
    <div
      className="deck"
    >
      <div
        className="draw-card card face-down"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          className="card-back"
        >
          <img
            alt="/backimage.png"
            src="/backimage.png"
          />
        </div>
        <div
          className="card-front"
        >
          <img
            alt="/backimage.png"
            src="/backimage.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="drawn-cards"
  />
  <div
    className="right-sidebar"
  >
    <div
      className="card-detail"
    >
      <h1 />
      <p />
      <h2>
        Meaning
      </h2>
      <p />
    </div>
  </div>
</div>
`;
